--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tech-blog",
   "version": "0.1.0",
+  "homepage": "https://truly-sparkle.github.io/blog",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
